--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ plugins/mitogen
 
 # Ansible inventory
 inventory/*
+!inventory/k8s-dev-cluster
 !inventory/local
 !inventory/sample
 inventory/*/artifacts/
